dscpln-parsebalx/ingress.yaml

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dscpln
  namespace: production
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`dscpln.staging.example.org`)
      kind: Rule
      middlewares:
        - name: forwardauth-geoblock
          namespace: production
      services:
        - name: dscpln-parsebalx
          port: 3300
  tls:
    secretName: example-org-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: parsebalx
  namespace: production
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`bal.staging.example.org`)
      kind: Rule
      middlewares:
        - name: forwardauth-geoblock
          namespace: production
      services:
        - name: dscpln-parsebalx
          port: 3000
  tls:
    secretName: example-org-tls
